fix many broken configs & lang & refactor - ability to enable/disable mentions - enderchest other perm - remove unused system command configs&lang - comment out unused lang - refactoring - remove lombok duplicated dependency - add ptime other perm - add signedit set perm - add tp other perm